--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
   </head>
   <body>
     <div id="root"></div>
+    <div id="modal-root"></div>
+    <!--Додано для модалок через портал -->
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
